# ziran2020

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
Lib/MPM/: MpmGrid.h  MpmInitializationHelper.h  MpmMultivarSystem.h  MpmParticleHandleBase.cpp  MpmParticleHandleBase.h  MpmSimulationBase.cpp  MpmSimulationBase.h  MpmSimulationDataAnalysis.h  PpicParticleHandle.h  PpicSimulation.h
Lib/MPM/Force/: BulkViscosityMpmForceHelper.cpp  BulkViscosityMpmForceHelper.h  CotangentBasedMpmForceHelper.h  DensitySummationFluidMpmForceHelper.h  FBasedMpmForceHelper.cpp  FBasedMpmForceHelper.h  FDecoupledBasedMpmForceHelper.h  FJMixedMpmForceHelper.h  ImplicitViscosityHelper.h  JBasedMpmForceHelper.cpp  JBasedMpmForceHelper.h  LinearCorotatedMpmForceHelper.cpp  LinearCorotatedMpmForceHelper.h  MpmEtherDragForceHelper.cpp  MpmEtherDragForceHelper.h  MpmForceBase.cpp  MpmForceHelperBase.h  MpmParallelPinningForceHelper.cpp  MpmParallelPinningForceHelper.h  MpmPinningForceHelper.cpp  MpmPinningForceHelper.h
Lib/Ziran/: CMakeLists.txt
Lib/Ziran/CS/DataStructure/: DataArray.h  DataArrayBase.h  DataManager.h
Lib/Ziran/CS/Util/: AttributeNamesForward.h  Profiler.cpp  Profiler.h  RandomNumber.cpp  RandomNumber.h  Timer.cpp  Timer.h
Lib/Ziran/Math/: MathTools.h
Lib/Ziran/Math/Geometry/: AnalyticLevelSet.cpp  AnalyticLevelSet.h  AnimatedCollisionObject.h  CollisionObject.cpp  CollisionObject.h  NQuadMesh.cpp  NQuadMesh.h  ObjIO.cpp  PartioIO.h  SimplexMesh.cpp  SimplexMesh.h  SourceCollisionObject.cpp  SourceCollisionObject.h  Visualizer.h  VtkIO.h
Lib/Ziran/Math/Linear/: ConjugateGradient.h  DenseExt.h  DirectSolver.h  GeneralizedMinimalResidual.h
Lib/Ziran/Math/Nonlinear/: NewtonsMethod.h
Lib/Ziran/Math/Splines/: BSplines.h
Lib/Ziran/Physics/: FiberGen.h  PlasticityApplier.cpp  PlasticityApplier.h
Lib/Ziran/Physics/ConstitutiveModel/: ConstitutiveModel.h  CorotatedDistortionalDilational.cpp  CorotatedDistortionalDilational.h  CorotatedElasticity.cpp  CorotatedElasticity.h  CorotatedIsotropic.h  CorotatedUnilateral.h  CotangentOrthotropic.h  EquationOfState.h  HyperelasticConstitutiveModel.h  LinearCorotated.cpp  LinearCorotated.h  LinearElasticity.cpp  LinearElasticity.h  NeoHookean.cpp  NeoHookean.h  NeoHookeanBorden.cpp  NeoHookeanBorden.h  NeoHookeanIsotropic.cpp  NeoHookeanIsotropic.h  ParallelPinningTarget.h  PinningTarget.h  QRAnisotropic.h  QRStableNeoHookean.h  QrBasedHelper.h  QuadraticVolumePenalty.h  Smudge.h  StVenantKirchhoff.cpp  StVenantKirchhoff.h  StvkWithHenckyDecoupled.h  StvkWithHenckyIsotropic.h  StvkWithHenckyIsotropicUnilateral.h  StvkWithHenckyWithFp.cpp  StvkWithHenckyWithFp.h  SurfaceTension.h  SvdBasedIsotropicHelper.h
Lib/Ziran/Physics/LagrangianForce/: FemCodimensional.cpp  FemCodimensional.h  FemHyperelasticity.h
Lib/Ziran/Sim/: DeformableObjectHandleCore.cpp  DeformableObjectHandleCore.h  SceneInitializationCore.h  SimulationBase.h
Projects/: CMakeLists.txt
Projects/anisofracture/: .gitignore  AnisoFractureInit.h  AnisoFractureInit2D.h  AnisoFractureInit3D.h  AnisoFractureSimulation.h  AnisoVisualizer.h  AnisotropicPhaseField.h  CMakeLists.txt  README.md  README.txt  anisofracture.cpp  anisofractureBatch2D.py  anisofractureBatch3D.py
Projects/anisofracture/examples/: 2DdiskTear.h  (+13 more)
Projects/coupling/: .gitignore  BuildLevelset.h  CMakeLists.txt  CouplingInit.h  CouplingInit2D.h  CouplingInit3D.h  CouplingSimulation.h  KoreanPositionCorrector.h  NilsPositionCorrector.h  ParticlesLevelSet.h  PushoutQuery.h  README.txt  TwoPhasePositionCorrector.h  coupling_test.py  main.cpp
Projects/splitting/: .gitignore  CMakeLists.txt  HeatSolver.h  LegoMarker.h  ParticleLevelSet.h  SmallGrid.h  SplittingBoundaryParticles.cpp  SplittingInit.h  SplittingInit2D.h  SplittingInit3D.h  SplittingSimulation.h  SplittingSimulationSolidSystemFast.cpp  SplittingSimulationWeakFormFast.cpp  UMGrid.h  main.cpp
(+8 files in other folders)
